# info-parser

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
.github/workflows/: build-release.yml
iparser/: __init__.py  __main__.py  config.py  logger.py  utils.py
iparser/api/: applicant.py
iparser/gui/: __main__.py  clipboard_monitor.py  main_window.py
resources/: iparser.spec  version_info
tests/: conftest.py  test_applicant.py  test_edge_cases.py
tools/: fix_indentation.py  update_version.py
