[project]
name = "iparser"
version = "0.0.0"
description = "申请人信息（如机构名称、姓名、身份等）的智能解析工具"
authors = [
    {name = "Walkline Wang",email = "walkline@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "jieba (>=0.42.1,<0.43.0)",
    "confz (>=2.1.0,<3.0.0)"
]

[project.urls]
repository = "https://github.com/walklinewang/info-parser"

[project.scripts]
iparser = "iparser.gui.__main__:main"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
]

[tool.pytest.ini_options]
addopts = "--cache-clear --html=pytest-report.html --self-contained-html tests/ -vv --durations=10"

[tool.pylint.main]
disable = [
    "logging-fstring-interpolation",
    "wrong-import-position",
    "too-many-return-statements",
    "broad-exception-caught",
    "attribute-defined-outside-init",
    "too-many-instance-attributes",
]

[tool.pylint.format]
expected-line-ending-format = "CRLF"
indent-string = "\t"
max-line-length = 88

[tool.pylint.reports]
output-format = "colorized"

[tool.isort]
src_paths = ["iparser", "tests", 'tools']
extend_skip = ["utils.py"]
indent = "\t"
line_length = 88
color_output = true
lines_after_imports = 2
multi_line_output = 5 # Hanging Grid Grouped
